Pasar demo del profesor a Java. Originalmente hecho por Andres a las 7:45 pm